[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Real-world email triage environment compliant with the OpenEnv specification"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0,<3.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "openai>=1.14.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27.0"]

[project.scripts]
email-triage-env = "app:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]
